--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,6 @@ gspread-asyncio==1.1.0
 aiohttp==3.6.2
 aiodns==2.0.0
 pytz==2020.4
-pymongo==3.12.0
-pymongo[srv]==3.12.0
-motor==2.5.1
+pymongo<5,>=4.1
+pymongo[srv]<5,>=4.1
+motor==3.0.0
